--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mark to Percentage Converter</title>
+    <title>OOC1 Exam Marks to Percentage Converter</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 <body>
@@ -11,11 +11,14 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="marks">Enter Marks (out of 75):</label>
-                    <input type="number" class="form-control" id="marks" placeholder="Enter marks" oninput="convertToPercentage()">
+                    <input type="number" class="form-control" id="marks" placeholder="Enter marks" min="0" max="75" step="0.1" oninput="convertToPercentage()">
                 </div>
                 <div class="form-group mt-3">
                     <label for="percentage">Percentage:</label>
                     <input type="text" class="form-control" id="percentage" placeholder="Percentage will appear here" readonly>
+                </div>
+                <div id="warning" class="alert alert-danger mt-3" style="display: none;">
+                    Marks must be between 0 and 75.
                 </div>
             </div>
         </div>
@@ -24,8 +27,14 @@
     <script>
         function convertToPercentage() {
             var marks = document.getElementById('marks').value;
-            var percentage = (marks / 75) * 70;
-            document.getElementById('percentage').value = percentage.toFixed(2) + '%';
+            if (marks < 0 || marks > 75) {
+                document.getElementById('warning').style.display = 'block';
+                document.getElementById('percentage').value = '';
+            } else {
+                document.getElementById('warning').style.display = 'none';
+                var percentage = (marks / 75) * 70;
+                document.getElementById('percentage').value = percentage.toFixed(2) + '%';
+            }
         }
     </script>
 </body>
