Update title in index.html to reflect purpose of the page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Mark to Percentage Converter</h1>
+        <h1 class="text-center">OOC1 Exam Marks to Percentage Converter</h1>
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="form-group">
